# minimumLabelingSpanningTree

./: CMakeLists.txt  README.md  execute
apresentacao/: apresentacao.aux  apresentacao.nav  apresentacao.tex  apresentacao.toc
discart/: main.cpp
include/: Graph.hpp
instancias/: instancia01.txt  instancia02.txt  instancia03.txt  instancia04.txt  instancia05.txt  instancia06.txt  instancia07.txt  instancia08.txt  instancia09.txt  instancia10.txt  instancia11.txt  instancia12.txt  instancia13.txt  instancia14.txt  instancia15.txt  instancia16.txt  instancia17.txt  instancia18.txt  instancia19.txt
src/disjoint-set-union/: UnionFind.cpp  UnionFind.h
src/generator/: generator.cpp
src/graph/: graph.cpp  main.cpp
